--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/lineer_change_password"
+    android:id="@+id/lineer_create_event"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.project.onur.playerx.fragment.CreateEventFragment">
