--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.project.onur.playerx.activity.MainActivity"
-    tools:showIn="@layout/fragment_three">
+    tools:showIn="@layout/fragment_profile">
 
     <TextView
         android:layout_width="wrap_content"
