--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.project.onur.playerx.fragment.TwoFragment">
+    tools:context="com.project.onur.playerx.fragment.MessagesFragment">
 
     <include layout="@layout/toolbar" />
 
