--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -17,17 +17,17 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:padding="6dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_cinema" />
 
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/text_username"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -35,15 +35,58 @@
                 android:layout_toRightOf="@+id/profile_image"
                 android:text="Onur Çeker" />
 
-            <!--
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:gravity="center_vertical"
+                android:id="@+id/categoryImage"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_other_mini"
+                android:layout_toLeftOf="@id/text_category"
+                 />
+
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/title"
-                android:text="Okeye dördüncü aranıyor"
-                android:textStyle="bold" />
--->
+                android:layout_height="20dp"
+                android:id="@+id/text_category"
+                android:gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:layout_alignParentRight="true"
+                android:text="Diğer"/>
+
+
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical"
+            android:padding="6dp">
+
+            <TextView
+                android:id="@+id/text_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                android:text="okeye dördüncü aranıyor köylü kahvesinde saat geç olmadan gelecek kişi haber ver"/>
+
+            <TextView
+                android:id="@+id/text_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="A material metaphor is the unifying theory of a crationalized space and a system of motion.The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically asdf"/>
+
+
+
+
+
+
+
+        </LinearLayout>
 
 
     </android.support.v7.widget.CardView>
