cardview design bug fixed

--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
@@ -11,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:cardUseCompatPadding="true"
         card_view:cardCornerRadius="4dp">
 
         <RelativeLayout
@@ -42,8 +42,9 @@
                 android:id="@+id/categoryImage"
                 android:layout_marginTop="10dp"
                 android:src="@drawable/ic_other_mini"
-                android:layout_toLeftOf="@id/text_category"
-                 />
+                android:layout_toLeftOf="@+id/text_category"
+                android:contentDescription=""
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="wrap_content"
