--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,8 @@
     tools:context="com.project.onur.playerx.fragment.HomeFragment">
 
 
+
+
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,20 +20,32 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:background="?attr/colorPrimary">
 
-        <com.miguelcatalan.materialsearchview.MaterialSearchView
-            android:id="@+id/search_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/MaterialSearchViewStyle"/>
-
 
     </android.support.v7.widget.Toolbar>
+
+
+
+    <com.miguelcatalan.materialsearchview.MaterialSearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/MaterialSearchViewStyle"/>
+
+
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical">
+
+
+
 
     <LinearLayout
         android:id="@+id/selecteditem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
@@ -74,7 +88,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView_layout"
-        android:layout_marginTop="?attr/actionBarSize"
         android:orientation="horizontal"
         android:visibility="visible">
 
@@ -83,7 +96,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbarSize="0dp"
-            android:scrollbars="none"            >
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -199,6 +218,8 @@
                 </LinearLayout>
 
 
+            </LinearLayout>
+
 
             </LinearLayout>
 
@@ -207,11 +228,29 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_linear"
+        android:gravity="bottom">
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
+</LinearLayout>
+
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/content_linear"
+        android:id="@+id/content_floating"
         android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
@@ -222,7 +261,6 @@
             android:layout_margin="@dimen/fab_margin"
             app:fabSize="auto"
             android:src="@drawable/ic_add" />
-
 
     </android.support.design.widget.CoordinatorLayout>
 
