--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.project.onur.playerx.fragment.EventDetailFragment">
+
 
     <include layout="@layout/toolbar" />
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize">
 
         <LinearLayout
             android:id="@+id/event_detail_form"
@@ -20,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
+            android:paddingTop="16dp"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -44,14 +47,14 @@
                     android:text="Onur Çeker" />
 
                 <ImageView
+                    android:id="@+id/categoryImage"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:gravity="center_vertical"
-                    android:id="@+id/categoryImage"
                     android:layout_marginTop="15dp"
-                    android:src="@drawable/ic_other_mini"
                     android:layout_toLeftOf="@+id/text_category"
                     android:contentDescription=""
+                    android:gravity="center_vertical"
+                    android:src="@drawable/ic_other_mini"
                     tools:ignore="ContentDescription" />
 
                 <TextView
@@ -140,9 +143,29 @@
 
 
 
+
             </LinearLayout>
+
+
 
     </ScrollView>
 
 
-</LinearLayout>
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_floating"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="@dimen/fab_margin"
+            app:fabSize="auto"
+            card_view:srcCompat="@drawable/ic_message_black_24dp" />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+</RelativeLayout>
