--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -116,6 +116,12 @@
                     android:textSize="15sp"
                     android:id="@+id/datetime"/>
 
+                <TextView
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/distance"/>
+
             </LinearLayout>
 
 
