delete event method added

--- a/app/src/main/res/layout/fragment_my_event.xml
+++ b/app/src/main/res/layout/fragment_my_event.xml
@@ -162,14 +162,14 @@
                 android:layout_height="match_parent">
 
                 <Button
-                    android:id="@+id/logout"
+                    android:id="@+id/delete_event"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/logout_button_style"
                     android:text="@string/delete_event"
                     android:textColor="@color/white"
