swipe refresh layout added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -226,11 +226,11 @@
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/content_linear"
-        android:gravity="bottom">
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/srl_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
             <android.support.v7.widget.RecyclerView
@@ -239,7 +239,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-    </LinearLayout>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+
+
 
 
 </LinearLayout>
