--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,14 +141,12 @@
                 android:orientation="horizontal">
 
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/profile_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/common_google_signin_btn_icon_dark"
-                    app:civ_border_width="3dp"
-                    app:civ_border_color="#FFFFFF"/>
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/common_google_signin_btn_icon_dark_normal"/>
+
                 <TextView
                     android:id="@+id/google"
                     android:layout_width="wrap_content"
@@ -180,8 +178,8 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/com_facebook_button_icon_white" />
