--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,20 +10,19 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
-        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/background"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginBottom="10dp"
             app:expandedTitleGravity="center|bottom"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:background="@drawable/background"
-            app:expandedTitleTextAppearance="@style/CollapsedAppBarTopic">
+            app:expandedTitleMarginBottom="10dp"
+            app:expandedTitleTextAppearance="@style/CollapsedAppBarTopic"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -34,12 +33,12 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="1.5"/>
+                app:layout_collapseParallaxMultiplier="1.5" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
