--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/background"
+            android:background="@color/colorPrimary"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleGravity="center|bottom"
@@ -37,6 +37,8 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
+                app:civ_border_width="3dp"
+                app:civ_border_color="@color/white"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="1.5" />
 
@@ -54,6 +56,6 @@
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:fabSize="mini"
-        app:srcCompat="@drawable/ic_settings" />
+        app:srcCompat="@drawable/ic_settings_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
