general color regulation

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -99,7 +99,7 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/sign_button_style"
             android:text="@string/register"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
 
