--- a/app/src/main/res/drawable/sign_button_style.xml
+++ b/app/src/main/res/drawable/sign_button_style.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/buttonGreen" />
+    <solid android:color="@color/primary_light" />
 
     <corners
         android:topLeftRadius="17dp"
