--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
             android:layout_marginBottom="5dp"
             android:background="@drawable/sign_button_style"
             android:text="@string/action_sign_in_short"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -103,7 +103,7 @@
                 android:layout_height="0.5dip"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/orText"
-                android:background="@color/buttonGreen" />
+                android:background="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/orText"
@@ -120,7 +120,7 @@
                 android:layout_height="0.5dip"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/orText"
-                android:background="@color/buttonGreen" />
+                android:background="@color/colorPrimary" />
         </RelativeLayout>
 
         <LinearLayout
