--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -156,7 +156,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/sign_button_style"
                 android:text="@string/create_event"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark"
                 android:textStyle="bold" />
 
         </LinearLayout>
