--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -269,7 +269,7 @@
             android:layout_gravity="bottom|right"
             android:layout_margin="@dimen/fab_margin"
             app:fabSize="auto"
-            android:src="@drawable/ic_add" />
+            app:srcCompat="@drawable/ic_add"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
