notification click event added with toolbar problem

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -60,5 +60,8 @@
 
 
     </RelativeLayout>
-
+    <FrameLayout
+        android:id="@+id/frame_layout_content_chat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
