--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -49,7 +49,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/sign_button_style"
             android:text="@string/create_event"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:visibility="gone"/>
 
