--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -91,7 +91,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/sign_button_style"
                 android:text="@string/change_password_button_text"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/white"
                 android:textStyle="bold" />
 
         </LinearLayout>
